ex/guestbook/templates/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    name: frontend
  name: frontend
spec:
  # type: LoadBalancer
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 4200
  selector:
    app: frontend
