ex/guestbook/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  rules:
  - host: frontend.local
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
  - host: backend.local
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 8080


# Note:- not required for dockre-desktop
